--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .venv
-src/data/*
-src/data/titanic_survivor.egg-info/
+data/*
+src/titanic_survivor.egg-info/
 .ruff_cache/
 .mypy_cache/
 .pytest_cache/
 .vscode/
 .DS_Store
-
+.env
+.ipynb_checkpoints/
